[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ascii-tree-tool"
version = "0.1.0"
description = "Cross-platform desktop GUI for generating ASCII tree representations of folder structures, with .txt, .csv, and Mermaid output."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Travis Rillos", email = "travis.rillos@gmail.com" }
]
keywords = ["ascii-tree", "directory-tree", "documentation", "pyqt6", "gui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "PyQt6>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
]

[project.urls]
Homepage = "https://github.com/xroadtraveler/ascii-tree-tool"
Repository = "https://github.com/xroadtraveler/ascii-tree-tool"
Issues = "https://github.com/xroadtraveler/ascii-tree-tool/issues"

[project.scripts]
ascii-tree-tool = "ascii_tree_tool.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]